<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>PlaywrightPOMSeries</groupId>
    <artifactId>PlaywrightPOMSeries</artifactId>
    <version>0.0.1-SNAPSHOT</version>

    <name>PlaywrightPOMSeries</name>
    <!-- FIXME change it to the project's website -->
    <url>http://www.example.com</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <extentreports-version>5.0.8</extentreports-version>
        <!--Gets only one Browser, increase if you want to test with more browser at the same time-->
        <thread>4</thread>
        <isPerCPU>false</isPerCPU>
    </properties>

    <dependencies>

        <dependency>
            <groupId>com.microsoft.playwright</groupId>
            <artifactId>playwright</artifactId>
            <version>1.25.0</version>
        </dependency>

        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>6.14.3</version>
        </dependency>

        <dependency>
            <groupId>com.aventstack</groupId>
            <artifactId>extentreports</artifactId>
            <version>${extentreports-version}</version>
        </dependency>

        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-java</artifactId>
            <version>7.9.0</version>
        </dependency>

        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-testng</artifactId>
            <version>7.9.0</version>
            <scope>test</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.24</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.20</version>

                <configuration>
                    <forkCount>3</forkCount>
                    <reuseForks>true</reuseForks>
                    <!--					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>-->
<!--                    <suiteXmlFiles>-->
<!--                        <suiteXmlFile>cucumber_testng_regressions.xml</suiteXmlFile>-->
<!--                        &lt;!&ndash; <suiteXmlFile>${suiteXmlFile}</suiteXmlFile> &ndash;&gt;-->
<!--                    </suiteXmlFiles>-->
                    <!-- Enables us parallel testing on more than one thread -->
                    <parallel>methods</parallel>
                    <threadCount>${thread}</threadCount>
                    <perCoreThreadCount>${isPerCPU}</perCoreThreadCount>
                    <useUnlimitedThreads>false</useUnlimitedThreads>
                    <!-- ************************************************************ -->
                    <runOrder>Alphabetical</runOrder>
                    <testFailureIgnore>true</testFailureIgnore>
                    <!-- If 1, it reruns after execution for failed test cases again: REPORT SHOWS ONLY THEIR RESULT!-->
                    <rerunFailingTestsCount>0</rerunFailingTestsCount>

                    <includes>
                        <!-- *Runner means, it will include runner classes name ends with runner.-->
                        <include>**/*Runner*.java</include>
                        <!-- in case of failure of any scenario, just failed ones executed  -->
                        <include>**/*FailedTestRunner.java</include>
                    </includes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>net.masterthought</groupId>
                <artifactId>maven-cucumber-reporting</artifactId>
                <version>5.0.0</version>
                <executions>
                    <execution>
                        <id>execution</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <configuration>
                            <projectName>XYZ HTML Reports</projectName>
                            <outputDirectory>${project.build.directory}/myReports</outputDirectory>
                            <inputDirectory>${project.build.directory}</inputDirectory>
                            <jsonFiles>
                                <param>**/*cucumber.json</param>
                            </jsonFiles>
                            <classificationFiles>
                                <param>**/classifications/*.properties</param>
                            </classificationFiles>
                            <checkBuildResult>false</checkBuildResult>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
